adding Surprise Library

--- a/notebooks/02_content_based_dev.ipynb
+++ b/notebooks/02_content_based_dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "id": "e47c0937",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,8 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "import numpy as np \n",
+    "import nltk\n",
+    "from nltk.stem import PorterStemmer\n",
     "\n",
     "\n",
     "DATA_PATH = '../data/' \n",
@@ -21,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "id": "d6e411eb",
    "metadata": {},
    "outputs": [
@@ -29,61 +31,88 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--- Defining Text Preprocessing with Stemming ---\n",
       "\n",
-      "NaNs in 'genres_str': 34\n",
-      "NaNs in 'tags_aggregated_str': 8177\n",
+      "--- Preparing Content Soup (with Preprocessing and Tag Re-evaluation) ---\n",
+      "Applying stemming to genres, tags, and titles...\n",
+      "Proportion of movies with empty aggregated tags: 83.94%\n",
       "\n",
-      "NaNs in 'genres_str': 0\n",
-      "NaNs in 'tags_aggregated_str': 0\n",
+      "Sample of NEW content_soup (built from processed text):\n",
+      "                   title_clean                       genres_processed  \\\n",
+      "0                    Toy Story  adventur anim children comedi fantasi   \n",
+      "1                      Jumanji              adventur children fantasi   \n",
+      "2             Grumpier Old Men                          comedi romanc   \n",
+      "3            Waiting to Exhale                    comedi drama romanc   \n",
+      "4  Father of the Bride Part II                                 comedi   \n",
       "\n",
-      "Sample of content_soup:\n",
-      "                   title_clean                                   genres_str  \\\n",
-      "0                    Toy Story  Adventure Animation Children Comedy Fantasy   \n",
-      "1                      Jumanji                   Adventure Children Fantasy   \n",
-      "2             Grumpier Old Men                               Comedy Romance   \n",
-      "3            Waiting to Exhale                         Comedy Drama Romance   \n",
-      "4  Father of the Bride Part II                                       Comedy   \n",
-      "\n",
-      "                            tags_aggregated_str  \\\n",
-      "0                               pixar pixar fun   \n",
-      "1  fantasy magic board game robin williams game   \n",
-      "2                                     moldy old   \n",
-      "3                                                 \n",
-      "4                              pregnancy remake   \n",
+      "                                tags_processed              title_processed  \\\n",
+      "0                              pixar pixar fun                    toy stori   \n",
+      "1  fantasi magic board game robin william game                      jumanji   \n",
+      "2                                    moldi old             grumpier old men   \n",
+      "3                                                             wait to exhal   \n",
+      "4                               pregnanc remak  father of the bride part ii   \n",
       "\n",
       "                                        content_soup  \n",
-      "0  Adventure Animation Children Comedy Fantasy Ad...  \n",
-      "1  Adventure Children Fantasy Adventure Children ...  \n",
-      "2  Comedy Romance Comedy Romance Comedy Romance m...  \n",
-      "3  Comedy Drama Romance Comedy Drama Romance Come...  \n",
-      "4  Comedy Comedy Comedy pregnancy remake Father o...  \n"
+      "0  adventur anim children comedi fantasi adventur...  \n",
+      "1  adventur children fantasi adventur children fa...  \n",
+      "2  comedi romanc comedi romanc moldi old grumpier...  \n",
+      "3  comedi drama romanc comedi drama romanc  wait ...  \n",
+      "4  comedi comedi pregnanc remak father of the bri...  \n"
      ]
     }
    ],
    "source": [
-    "print(f\"\\nNaNs in 'genres_str': {movies_df['genres_str'].isnull().sum()}\")\n",
-    "print(f\"NaNs in 'tags_aggregated_str': {movies_df['tags_aggregated_str'].isnull().sum()}\")\n",
+    "print(\"--- Defining Text Preprocessing with Stemming ---\")\n",
+    "stemmer = PorterStemmer()\n",
+    "# lemmatizer = WordNetLemmatizer() # Alternative\n",
     "\n",
+    "def preprocess_text_for_cb(text):\n",
+    "    if pd.isna(text) or text.strip() == \"\":\n",
+    "        return \"\"\n",
+    "    # Simple tokenization (split by space)\n",
+    "    tokens = text.lower().split()\n",
+    "    # Stemming\n",
+    "    stemmed_tokens = [stemmer.stem(token) for token in tokens]\n",
+    "    # Lemmatization (alternative):\n",
+    "    # tokens = word_tokenize(text.lower())\n",
+    "    # lemmatized_tokens = [lemmatizer.lemmatize(token) for token in tokens]\n",
+    "    return \" \".join(stemmed_tokens) # or \" \".join(lemmatized_tokens)\n",
+    "\n",
+    "# Cell 3: Prepare Content Soup (Revised)\n",
+    "print(\"\\n--- Preparing Content Soup (with Preprocessing and Tag Re-evaluation) ---\")\n",
+    "\n",
+    "# Fill NaNs first, as done before\n",
     "movies_df['genres_str'] = movies_df['genres_str'].fillna('')\n",
     "movies_df['tags_aggregated_str'] = movies_df['tags_aggregated_str'].fillna('')\n",
+    "movies_df['title_clean'] = movies_df['title_clean'].fillna('')\n",
     "\n",
-    "print(f\"\\nNaNs in 'genres_str': {movies_df['genres_str'].isnull().sum()}\")\n",
-    "print(f\"NaNs in 'tags_aggregated_str': {movies_df['tags_aggregated_str'].isnull().sum()}\")\n",
     "\n",
-    "# Create the content soup\n",
-    "# We will give more weight to genres than tags by repeating genres, e.g. 3 times\n",
-    "# This is a simple way to heuristically assign importance.\n",
-    "movies_df['content_soup'] = (movies_df['genres_str'] + ' ') * 3 + \\\n",
-    "                            movies_df['tags_aggregated_str'] + ' ' + \\\n",
-    "                            movies_df['title_clean'] # Adding title might help too\n",
+    "print(\"Applying stemming to genres, tags, and titles...\")\n",
+    "movies_df['genres_processed'] = movies_df['genres_str'].apply(preprocess_text_for_cb)\n",
+    "movies_df['tags_processed'] = movies_df['tags_aggregated_str'].apply(preprocess_text_for_cb)\n",
+    "movies_df['title_processed'] = movies_df['title_clean'].apply(preprocess_text_for_cb)\n",
     "\n",
-    "print(\"\\nSample of content_soup:\")\n",
-    "print(movies_df[['title_clean', 'genres_str', 'tags_aggregated_str', 'content_soup']].head())"
+    "tag_sparsity_ratio = movies_df[movies_df['tags_aggregated_str'] == ''].shape[0] / movies_df.shape[0]\n",
+    "print(f\"Proportion of movies with empty aggregated tags: {tag_sparsity_ratio:.2%}\")\n",
+    "\n",
+    "# Decide on tag inclusion based on sparsity. For now, let's include them.\n",
+    "# Weighting genres more\n",
+    "movies_df['content_soup'] = ( # Overwrite the old 'content_soup' or name it 'content_soup_stemmed_ngram'\n",
+    "    movies_df['genres_processed'] + ' ' + \n",
+    "    movies_df['genres_processed'] + ' ' +  # Emphasize genres\n",
+    "    movies_df['tags_processed'] + ' ' +\n",
+    "    movies_df['title_processed']\n",
+    ")\n",
+    "# --- END CRUCIAL CHANGE ---\n",
+    "\n",
+    "print(\"\\nSample of NEW content_soup (built from processed text):\")\n",
+    "# Display the NEW content_soup that will be used for TF-IDF\n",
+    "print(movies_df[['title_clean', 'genres_processed', 'tags_processed', 'title_processed', 'content_soup']].head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "id": "69bbe2ec",
    "metadata": {},
    "outputs": [
@@ -92,81 +121,45 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "--- TF-IDF Vectorization with Separate Feature Weighting---\n",
-      "Shape of genres TF-IDF matrix: (9742, 21)\n",
-      "Shape of tags TF-IDF matrix: (9742, 708)\n",
-      "Shape of title TF-IDF matrix: (9742, 8971)\n",
-      "Shape of combined weighted TF-IDF matrix: (9742, 9700)\n",
-      "Shape of Cosine Similarity matrix: (9742, 9742)\n",
+      "--- TF-IDF Vectorization (with N-grams) ---\n",
+      "Shape of new TF-IDF matrix : (9742, 3254)\n",
       "\n",
-      "Sample of cosine similarity matrix (first 5x5):\n",
-      "[[1.         0.63671301 0.13330875 0.11792111 0.2094155 ]\n",
-      " [0.63671301 1.         0.         0.         0.        ]\n",
-      " [0.13330875 0.         1.         0.86066406 0.4981894 ]\n",
-      " [0.11792111 0.         0.86066406 1.         0.4406841 ]\n",
-      " [0.2094155  0.         0.4981894  0.4406841  1.        ]]\n"
+      "--- Computing Cosine Similarity Matrix ---\n",
+      "Shape of new Cosine Similarity matrix : (9742, 9742)\n",
+      "\n",
+      "Sample of new cosine similarity matrix (first 5x5):\n",
+      "[[1.         0.18378459 0.02161877 0.03005987 0.02402021]\n",
+      " [0.18378459 1.         0.         0.         0.        ]\n",
+      " [0.02161877 0.         1.         0.18367892 0.03764402]\n",
+      " [0.03005987 0.         0.18367892 1.         0.0523422 ]\n",
+      " [0.02402021 0.         0.03764402 0.0523422  1.        ]]\n"
      ]
     }
    ],
    "source": [
-    "print(\"\\n--- TF-IDF Vectorization with Separate Feature Weighting---\")\n",
-    "# Initialize the TF-IDF Vectorizer\n",
-    "# stop_words='english': remove common English words\n",
-    "# min_df=2: ignore terms that appear in less than 2 documents (movies)\n",
-    "# max_df=0.95: ignore terms that appear in more than 95% of the documents (too common)\n",
+    "print(\"\\n--- TF-IDF Vectorization (with N-grams) ---\")\n",
+    "# Use 'content_soup' \n",
+    "tfidf_vectorizer = TfidfVectorizer(\n",
+    "    stop_words='english', \n",
+    "    min_df=3,         # Slightly increased min_df\n",
+    "    max_df=0.90,      # Slightly decreased max_df\n",
+    "    ngram_range=(1, 2) # Include unigrams and bigrams\n",
+    ")\n",
     "\n",
-    "# Create separate vectorizers for genres and tags\n",
-    "genres_vectorizer = TfidfVectorizer(stop_words='english', min_df=1, max_df=0.95)\n",
-    "tags_vectorizer = TfidfVectorizer(stop_words='english', min_df=2, max_df=0.90)\n",
-    "title_vectorizer = TfidfVectorizer(stop_words='english', min_df=1, max_df=0.95)\n",
+    "tfidf_matrix = tfidf_vectorizer.fit_transform(movies_df['content_soup'])\n",
+    "print(\"Shape of new TF-IDF matrix :\", tfidf_matrix.shape) # Shape might change\n",
     "\n",
-    "# Fit and transform each feature set separately\n",
-    "genres_matrix = genres_vectorizer.fit_transform(movies_df['genres_str'])\n",
-    "tags_matrix = tags_vectorizer.fit_transform(movies_df['tags_aggregated_str'])\n",
-    "title_matrix = title_vectorizer.fit_transform(movies_df['title_clean'])\n",
-    "\n",
-    "print(f\"Shape of genres TF-IDF matrix: {genres_matrix.shape}\")\n",
-    "print(f\"Shape of tags TF-IDF matrix: {tags_matrix.shape}\")\n",
-    "print(f\"Shape of title TF-IDF matrix: {title_matrix.shape}\")\n",
-    "\n",
-    "# We need to ensure all matrices have the same number of rows (which they should)\n",
-    "# But they will have different numbers of columns (features)\n",
-    "\n",
-    "# Combine matrices with weights using scipy's hstack\n",
-    "from scipy.sparse import hstack\n",
-    "\n",
-    "# Apply weights to each matrix before combining\n",
-    "# You can adjust these weights based on what you think is most important\n",
-    "genres_weight = 0.6  # Genres have highest weight\n",
-    "tags_weight = 0.3    # Tags have medium weight\n",
-    "title_weight = 0.1   # Title has lowest weight\n",
-    "\n",
-    "# Multiply each matrix by its weight\n",
-    "weighted_genres = genres_matrix * genres_weight\n",
-    "weighted_tags = tags_matrix * tags_weight\n",
-    "weighted_title = title_matrix * title_weight\n",
-    "\n",
-    "from sklearn.preprocessing import normalize\n",
-    "normalized_weighted_genres = normalize(weighted_genres, norm='l2', axis=1)\n",
-    "normalized_weighted_tags = normalize(weighted_tags, norm='l2', axis=1)\n",
-    "normalized_weighted_title = normalize(weighted_title, norm='l2', axis=1)\n",
-    "\n",
-    "# Stack horizontally to combine features while preserving document order\n",
-    "tfidf_combined = hstack([weighted_genres, weighted_tags, weighted_title])\n",
-    "\n",
-    "print(f\"Shape of combined weighted TF-IDF matrix: {tfidf_combined.shape}\")\n",
-    "\n",
-    "# Use this combined matrix for cosine similarity\n",
-    "cosine_sim_content = cosine_similarity(tfidf_combined, tfidf_combined)\n",
-    "\n",
-    "print(\"Shape of Cosine Similarity matrix:\", cosine_sim_content.shape)\n",
-    "print(\"\\nSample of cosine similarity matrix (first 5x5):\")\n",
+    "# Cell 5: Cosine Similarity (No change in method, just uses new matrix)\n",
+    "print(\"\\n--- Computing Cosine Similarity Matrix ---\")\n",
+    "cosine_sim_content = cosine_similarity(tfidf_matrix, tfidf_matrix)\n",
+    "print(\"Shape of new Cosine Similarity matrix :\", cosine_sim_content.shape)\n",
+    "print(\"\\nSample of new cosine similarity matrix (first 5x5):\")\n",
     "print(cosine_sim_content[:5, :5])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "id": "1d2af70f",
    "metadata": {},
    "outputs": [
@@ -178,27 +171,27 @@
       "\n",
       "--- Testing Movie-to-Movie Recommendations ---\n",
       "Recommendations for 'Toy Story':\n",
-      "                                        Title  Similarity Score  \\\n",
-      "2355                              Toy Story 2          0.917221   \n",
-      "1706                                     Antz          0.872615   \n",
-      "2809  Adventures of Rocky and Bullwinkle, The          0.872615   \n",
-      "3000                Emperor's New Groove, The          0.872615   \n",
-      "3568                           Monsters, Inc.          0.872615   \n",
+      "                        Title  Similarity Score  \\\n",
+      "2355              Toy Story 2          0.813498   \n",
+      "1706                     Antz          0.718686   \n",
+      "3568           Monsters, Inc.          0.718686   \n",
+      "9430                    Moana          0.718686   \n",
+      "6948  Tale of Despereaux, The          0.693491   \n",
       "\n",
       "                                           Genres  \n",
       "2355  Adventure Animation Children Comedy Fantasy  \n",
       "1706  Adventure Animation Children Comedy Fantasy  \n",
-      "2809  Adventure Animation Children Comedy Fantasy  \n",
-      "3000  Adventure Animation Children Comedy Fantasy  \n",
       "3568  Adventure Animation Children Comedy Fantasy  \n",
+      "9430  Adventure Animation Children Comedy Fantasy  \n",
+      "6948  Adventure Animation Children Comedy Fantasy  \n",
       "\n",
       "Recommendations for 'Heat':\n",
-      "               Title  Similarity Score                 Genres\n",
-      "2815             F/X          0.986394  Action Crime Thriller\n",
-      "22         Assassins          0.972973  Action Crime Thriller\n",
-      "156         Net, The          0.972973  Action Crime Thriller\n",
-      "417   Judgment Night          0.972973  Action Crime Thriller\n",
-      "793         Die Hard          0.972973  Action Crime Thriller\n"
+      "            Title  Similarity Score                 Genres\n",
+      "1693        Ronin          0.906754  Action Crime Thriller\n",
+      "2802        Shaft          0.906754  Action Crime Thriller\n",
+      "2815          F/X          0.906754  Action Crime Thriller\n",
+      "3036        Coffy          0.906754  Action Crime Thriller\n",
+      "3403  Next of Kin          0.906754  Action Crime Thriller\n"
      ]
     }
    ],
@@ -265,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "id": "7906522a",
    "metadata": {},
    "outputs": [
@@ -276,7 +269,7 @@
       "\n",
       "--- Saving Content-Based Model Artifacts ---\n",
       "'cosine_similarity_content.npy' saved successfully.\n",
-      "Vectorizers saved successfully.\n"
+      "'tfidf_vectorizer_content.joblib' saved successfully.\n"
      ]
     }
    ],
@@ -286,12 +279,9 @@
     "    np.save(DATA_PATH + 'cosine_similarity_content.npy', cosine_sim_content)\n",
     "    print(\"'cosine_similarity_content.npy' saved successfully.\")\n",
     "\n",
-    "    \n",
     "    import joblib\n",
-    "    joblib.dump(genres_vectorizer, '../models/genres_vectorizer.joblib')\n",
-    "    joblib.dump(tags_vectorizer, '../models/tags_vectorizer.joblib')\n",
-    "    joblib.dump(title_vectorizer, '../models/title_vectorizer.joblib')\n",
-    "    print(\"Vectorizers saved successfully.\")\n",
+    "    joblib.dump(tfidf_vectorizer, '../models/tfidf_vectorizer_content.joblib')\n",
+    "    print(\"'tfidf_vectorizer_content.joblib' saved successfully.\")\n",
     "\n",
     "except Exception as e:\n",
     "    print(f\"Error saving artifacts: {e}\")"
@@ -299,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "id": "7e5ae786",
    "metadata": {},
    "outputs": [
@@ -310,19 +300,19 @@
       "\n",
       "--- Testing User-Specific Content Recommendations ---\n",
       "Content-based recommendations for User 1 (based on movies rated >= 4.0):\n",
-      "                      title_clean  predicted_content_score  \\\n",
-      "0  Dragonheart 2: A New Beginning                 0.342650   \n",
-      "1         The Great Train Robbery                 0.334291   \n",
-      "2                       Flashback                 0.334259   \n",
-      "3              Hunting Party, The                 0.333410   \n",
-      "4                  Stunt Man, The                 0.329227   \n",
+      "           title_clean  predicted_content_score  \\\n",
+      "0      Ratchet & Clank                 0.146102   \n",
+      "1            Flashback                 0.142380   \n",
+      "2      Pagemaster, The                 0.139309   \n",
+      "3  G.I. Joe: The Movie                 0.137427   \n",
+      "4       Chicken Little                 0.136441   \n",
       "\n",
-      "                                       genres_str  \n",
-      "0  Action Adventure Comedy Drama Fantasy Thriller  \n",
-      "1             Action Adventure Comedy Crime Drama  \n",
-      "2             Action Adventure Comedy Crime Drama  \n",
-      "3          Action Adventure Comedy Drama Thriller  \n",
-      "4  Action Adventure Comedy Drama Romance Thriller  \n"
+      "                                          genres_str  \n",
+      "0  Action Adventure Animation Children Comedy Sci-Fi  \n",
+      "1                Action Adventure Comedy Crime Drama  \n",
+      "2        Action Adventure Animation Children Fantasy  \n",
+      "3  Action Adventure Animation Children Fantasy Sc...  \n",
+      "4  Action Adventure Animation Children Comedy Sci-Fi  \n"
      ]
     }
    ],
